# maf-lib

./: .cruft.json  .dockerignore  .gitignore  .gitlab-ci.yml  .isort.cfg  .pre-commit-config.yaml  .secrets.baseline  .travis.yml  CONTRIBUTING.md  Dockerfile  Jenkinsfile  Jenkinsfile.security  MANIFEST.in  Makefile  README.md  codecov.yml  dev-requirements.in  dev-requirements.txt  docker.sh  mkdocs.yml  mypy.ini  pyproject.toml  requirements.in  requirements.txt  setup.cfg  setup.py  tox.ini
maflib/: __init__.py  __main__.py  column.py  column_types.py  column_values.py  header.py  locatable.py  logger.py  overlap_iter.py  reader.py  record.py  scheme_factory.py  schemes.py  sort_order.py  sorter.py  util.py  validation.py  writer.py
maflib/schemas/: gdc-1.0.0-aliquot-merged.json  gdc-1.0.0-aliquot.json  gdc-1.0.1-public.json  gdc-2.0.0-aliquot-merged-masked.json  gdc-2.0.0-aliquot-merged.json  gdc-2.0.0-aliquot.json  gdc-fmi-2.0.0.json  gdc-genie-2.0.0.json
maflib/schemes/: base.py  no_restrictions_scheme.py
maflib/tests/: test_column_types.py  test_reader.py  test_scheme_factory.py  test_sort_order.py  testutils.py
maftools/: __main__.py  subcommand.py  util.py  view.py
maftools/tests/: test_sort.py  test_subcommand.py
schemas/: gdc-1.0.1-protected.json
scripts/: run_coverage.sh
src/maflib/: column.py  column_types.py  column_values.py  header.py  logger.py  overlap_iter.py  reader.py  record.py  scheme_factory.py  schemes.py  sort_order.py  util.py  validation.py  writer.py
src/maflib/resources/: gdc-1.0.0-aliquot-merged-masked.json  gdc-1.0.0-merged-protected.json  gdc-1.0.0-merged-public.json  gdc-1.0.0-protected.json  gdc-1.0.0-public.json  gdc-1.0.0.json  gdc-1.0.1-protected.json  gdc-1.2.0-protected.json  gdc-1.2.0-public.json  gdc-genie-1.0.0.json
src/maflib/tests/: test_column.py  test_column_types.py  test_header.py  test_overlap_iter.py  test_reader.py  test_record.py  test_scheme_factory.py  test_schemes.py  test_sort_order.py  test_sorter.py  test_util.py  test_validation.py  test_writer.py  testutils.py
src/maftools/: __main__.py  sort.py  subcommand.py  util.py  validate.py  view.py
src/maftools/tests/: __init__.py  test_sort.py  test_subcommand.py  test_validate.py  test_view.py  testutils.py
tests/maflib/: test_column.py  test_column_types.py  test_header.py  test_overlap_iter.py  test_reader.py  test_record.py  test_scheme_factory.py  test_schemes.py  test_sort_order.py  test_sorter.py  test_util.py  test_validation.py  test_writer.py  testutils.py
tests/maftools/: test.gdc-1.0.0-public.maf  test_validate.py  utils.py
