[build-system]
requires = ["flit_scm"]
build-backend = "flit_scm:buildapi"

[project]
name = "bioinf_maflib"
description = "MAF library"
authors = [
    {name = "Charles Czysz", email = "czysz@uchicago.edu"}
]
dependencies = []

readme = "README.md"
requires-python = ">=3.8"
license = {file = "LICENSE"}
classifiers = [
    "License :: OSI Approved :: Apache Software License",
	"Programming Language :: Python :: 3",
	"Programming Language :: Python :: 3 :: Only"
]
dynamic = ["version"]

[project.urls]
homepage = "https://github.com/NCI-GDC/maf-lib"

[project.scripts]
maflib = "maflib.__main__:main"

[tool.setuptools_scm]
write_to = "maflib/_version.py"
local_scheme = "dirty-tag"
version_scheme = "python-simplified-semver"
fallback_version = "0"

[tool.coverage.run]
source = ["maflib"]
branch = true
parallel = true

[tool.flit.module]
# Required because project name is different
name = "maflib"

[tool.flit.sdist]
include = ["maflib/_version.py"]
exclude = [
        ".*",
        "dev-requirements.*",
        "Dockerfile",
        "Jenkinsfile",
        "*travis.yml",
        "tox.ini",
]

[tool.black]
line-length = 88
skip-string-normalization = true
target-version = ['py38']

[tool.isort]
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses=true
line_length = 88

[tool.mypy]
python_version = 3.8
disallow_untyped_defs = true
warn_return_any = true
warn_unused_configs = true

[tool.coverage.report]
show_missing = true
