[metadata]
name = bioinf_maflib
description = Maflib
url = https://github.com/NCI-GDC/maf-lib
author = Charles Czysz
author_email = czysz@uchicago.edu
python_requires = >=3.6
license_files =
	LICENSE
long_description = file:README.md
long_description_content_type = text/markdown
classifiers =
	Programming Language :: Python :: 3
	Programming Language :: Python :: 3 :: Only

[options]
install_requires =

zip_safe = False
include_package_data = True
packages = find:

[options.entry_points]
console_scripts =
	maflib = maflib.__main__:main
